--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src/test/resources"/>
+	<classpathentry excluding="**" kind="src" path="src/test/resources"/>
 	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/main/resources">
 		<attributes>
 			<attribute name="test" value="true"/>
