Additional TestCase Added

--- a/src/test/resources/com/jtaf/properties/config.properties
+++ b/src/test/resources/com/jtaf/properties/config.properties
@@ -1,3 +1,7 @@
 Browser=Chrome
 url=https://opensource-demo.orangehrmlive.com/web/index.php
 implicit.wait=10
+username=admin
+password=admin123
+user=Admin
+status=Enabled
