--- a/src/test/resources/com/jtaf/properties/objectrepo.properties
+++ b/src/test/resources/com/jtaf/properties/objectrepo.properties
@@ -1,6 +1,6 @@
 #LoginPage
 userName=xpath://input[@name='username']
-password=xpath://input[@name='password']
+passWord=xpath://input[@name='password']
 login=xpath://button[contains(@class,'orangehrm-login-button')]
 forgotPasswordLink=xpath://p[contains(@class,'login-forgot-header')]
 fplUserName=xpath://input[@name='username']
@@ -9,4 +9,16 @@ fplReset=xpath://button[contains(@class,'orangehrm-forgot-password-button--reset
 #DashboardPage
 userDropDown=css:.oxd-userdropdown-tab
 userDropDownMenu=css:.oxd-dropdown-menu
-uddLogout=xpath://a[contains(@href,'logout')]
+logout=xpath://a[contains(@href,'logout')]
+adminSection = xpath://a[contains(@href,'admin/viewAdminModule')]
+
+#AdminPage
+adminHeader = css:.oxd-topbar-header-breadcrumb
+adminSearchUserName = css:.oxd-form .oxd-input.oxd-input--active
+adminUserRoleDropDown = xpath:(//div[contains(@class,'oxd-select-text--after')])[1]
+adminUserRoleDropDownOptions = xpath://div[@role='listbox']//div[@role='option']//span
+adminUserStatusDropDown = xpath:(//div[contains(@class,'oxd-select-text--after')])[2]
+adminUserStatusDropDownOptions = xpath://div[@role='listbox']//div[@role='option']//span
+adminSearch = xpath://button[contains(@class,'oxd-button--secondary orangehrm-left-space')]
+adminSearchResultSection = css:.oxd-table-card
+adminSearchResultData = css:.oxd-table-cell.oxd-padding-cell:nth-child(2)
