DataProvider Implementation Added

--- a/src/test/resources/com/jtaf/properties/config.properties
+++ b/src/test/resources/com/jtaf/properties/config.properties
@@ -1,7 +1,7 @@
 Browser=Chrome
 url=https://opensource-demo.orangehrmlive.com/web/index.php
 implicit.wait=10
-username=admin
-password=admin123
-user=Admin
-status=Enabled
+suiteSheet=TestSuite
+testColumn=TestCaseId
+runColumn=RunMode
+jenkinsAutomationReportPath=http://$:8081/job/Way2Automation_DataDriven_Project/Extent_20Report/
