PageFactory Base Pacakge Code Updated

--- a/src/test/resources/com/jtaf/properties/config.properties
+++ b/src/test/resources/com/jtaf/properties/config.properties
@@ -1,6 +1,7 @@
 Browser=Chrome
 url=https://opensource-demo.orangehrmlive.com/web/index.php
 implicit.wait=10
+wait.time=5
 suiteSheet=TestSuite
 testColumn=TestCaseId
 runColumn=RunMode
